[package]
name = "streammd-rs"
version = "0.1.0"
authors = ["Conrad Leonard"]
edition = "2021"
description = "Single-pass probabilistic duplicate marking of alignments with a Bloom filter."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bloomfilter"
path = "src/bloomfilter.rs"

[dependencies]
anyhow = "1.0.72"
arrayvec = "0.7.4"
bit-vec = "0.6.3"
bytesize = "1.2.0"
clap = { version = "4.3.19", features = ["derive", "wrap_help"] }
const_format = "0.2.31"
env_logger = "0.10.0"
log = "0.4.19"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
regex = "1.9.1"
serde_json = "1.0.104"
xxhash-rust = { version = "0.8.6" , features = ["xxh3"] }

[profile.release-with-debug]
inherits = "release"
debug = true

# without optimization the FPR tests in particular take a very long time
[profile.test]
opt-level = 3
